<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".activities.register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/kotlin_hub_text_logo" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tf_username"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:backgroundTint="@color/limeGreen"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            android:backgroundTint="@color/limeGreen"
            android:hint="@string/tf_email"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            android:backgroundTint="@color/limeGreen"
            android:hint="@string/tf_password"/>

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            android:backgroundTint="@color/limeGreen"
            android:hint="@string/tf_confirm_password"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:background="@color/forestGreen"
            android:text="@string/btn_register"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="177dp" />

        <Button
            android:id="@+id/btn_get_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnColorPrimary"
            android:text="GET ALL USERS" />

        <TextView
            android:id="@+id/tv_display_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />


    </LinearLayout>

</LinearLayout>